# csc2003-team-a4

./: README.md
accelerometer-ultrasonic/code/: CMakeLists.txt  README.md
accelerometer-ultrasonic/code/Presentation/: Ultrasonic & Accelerometer PPT.pptx
accelerometer-ultrasonic/code/accelerometer/: CMakeLists.txt  acc.c  vector.h
accelerometer-ultrasonic/code/ultrasonic/: CMakeLists.txt  ultrasonic.c
communications/code/: README.md
communications/code/CSC2003-main/: README.md
communications/code/CSC2003-main/CSC2003Dashboard/: definition.py  main.py
communications/code/CSC2003-main/CSC2003Dashboard/M5StickCPlus/: main.py
communications/code/CSC2003-main/CSC2003Dashboard/templates/: _layout.html  data.html  gallery.html  index.html  map.html
communications/code/MSPtoM5/: main.py
communications/code/MSPtoM5/uart_pc_echo_12mhz_brclk/: .ccsproject  .cproject  .project  startup_msp432p401r_ccs.c  uart_pc_echo_12mhz_brclk.c
communications/code/MSPtoM5/uart_pc_echo_12mhz_brclk/.launches/: uart_pc_echo_12mhz_brclk.launch
communications/code/MSPtoM5/uart_pc_echo_12mhz_brclk/Debug/: ccsObjs.opt  startup_msp432p401r_ccs.d  subdir_rules.mk  subdir_vars.mk  (+5 more)
communications/code/comms/: CMakeLists.txt
communications/code/comms/comms/: CMakeLists.txt  comms.c
communications/code/comms/commsHC05/: CMakeLists.txt  commsHC05.c
communications/demo/: Communications_Final.pptx
infrared/code/: CMakeLists.txt  README.md
infrared/code/barcodencoder/: CMakeLists.txt  barcodencoder.c
infrared/code/blink/: CMakeLists.txt  blink.c
infrared/demo/: Infrared Barcode and Encoder explanation.pptx
mapping-navigation/: README.md
mapping-navigation/code/: CMakeLists.txt  README.md  database.h  firstPathFound.c  main.c  shortestPath.c
mapping-navigation/code/main/: CMakeLists.txt  database.h  firstPathFound.c  main.c  shortestPath.c
mapping-navigation/demo/: Mapping & Navigation Systems Design.pptx  Video Link.txt
motor-control/code/: CMakeLists.txt  README.md
motor-control/code/motor/: CMakeLists.txt  motor.c
team-integration/code/: README.md
team-integration/code/main/: CMakeLists.txt  barcodencoder.c  comms.c  database.h  main.c  motor.c  ultrasonic.c
team-integration/code/main/pathfinding/: firstPathFound.c  shortestPath.c
(+1 files in other folders)
